manifests/Statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jenkins-statefulset
spec:
  serviceName: "jenkins-loadbalancer-service"
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      containers:
      - name: jenkins-container
        image: "asia-south1-docker.pkg.dev/poshan-403704/poshan/express-app:120"
        ports:
        - name: http
          containerPort: 8080
        - name: https
          containerPort: 8443
        - name: udp-port
          containerPort: 54321
        securityContext:
          runAsUser: 1000
          runAsGroup: 1000
        volumeMounts:
        - name: jenkins-data
          mountPath: /var/jenkins_home
      volumes:
        - name: jenkins-data
          persistentVolumeClaim:
            claimName: shared-data-pvc
